[FEAT] Fishing updates

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -594,6 +594,15 @@
   "kingdomChores.completeActive": "Complete active chores to unlock",
   "kingdomChores.loading": "Loading new chores",
   "kingdomChores.reset": "New chores: {{timeLeft}}",
+  "chumDetails.wildMushroom": "Hmm, this is guaranteed to get me something!",
+  "chumDetails.honey": "A sweet toothed snapper will love this!",
+  "chumDetails.rhubarb": "Goes well with Earthworms!",
+  "chumDetails.yam": "A perfect pair with a Grub.",
+  "chumDetails.broccoli": "Even fish don't like Brocolli!",
+  "chumDetails.pepper": "A spicy treat for the curious fish.",
+  "chumDetails.artichoke": "A tasty treat to strengthen the bones.",
+  "chumDetails.onion": "Tangy!",
+  "chumDetails.turnip": "Rumoured to attract big fish",
   "chumDetails.gold": "The shimmering gold can be seen 100 miles away",
   "chumDetails.iron": "A shimmering sparkle, can be seen at all angles during Dusk",
   "chumDetails.stone": "Maybe throwing a few stones will attract some fish",
@@ -992,6 +1001,15 @@
   "description.angelfish": "The aquatic celestial beauty, adorned in a palette of vibrant hues.",
   "description.halibut": "The flat ocean floor dweller, a master of disguise in sandy camouflage.",
   "description.parrotFish": "A kaleidoscope of colors beneath the waves, this fish is nature's living artwork.",
+  "description.porgy": "A spirited spring swimmer with delicate, flaky flesh. These social fish gather in large schools when the flowers start to bloom.",
+  "description.muskellunge": "Known as the 'fish of ten thousand casts', this autumn predator is as fierce as it is elusive. A prized catch for any ambitious angler.",
+  "description.trout": "When winter's chill grips the waters, these speckled beauties become more active. Their scales shimmer like fresh-fallen snow.",
+  "description.walleye": "With eyes that glow in the winter twilight, these nocturnal hunters are masters of the cold, deep waters.",
+  "description.weakfish": "Don't let the name fool you! These spring visitors are known for their iridescent scales and surprisingly strong fights.",
+  "description.rock.blackfish": "Autumn brings these powerful fish close to shore, where they test both fishing line and patience with their mighty pulls.",
+  "description.cobia": "Summer's most ambitious predator, these streamlined fighters are known to chase hooked fish right up to the boat!",
+  "description.tilapia": "When summer warms the waters, these hardy fish patrol the shallows. A favorite among sustainable farmers worldwide.",
+
   "description.Beehive": "A bustling beehive, producing honey from actively growing flowers; 10% chance upon Honey harvest to summon a bee swarm which will pollinate all growing crops with a +0.2 boost!",
   "description.red.pansy": "A red pansy.",
   "description.yellow.pansy": "A yellow pansy.",
@@ -1502,6 +1520,7 @@
   "quest.1500.fish": "Catch 1500 fish",
   "quest.marine.marvel": "Catch each permanent Marine Marvel",
   "quest.5.fish": "Catch 5 of every fish",
+  "quest.38.species": "Discover 38 species of fish",
   "quest.sunpetal.savant": "Discover 12 Sunpetal variants",
   "quest.bloom.bigshot": "Discover 12 Bloom variants",
   "quest.lily.luminary": "Discover 12 Lily variants",
@@ -2492,6 +2511,7 @@
   "milestone.sunpetalSavant": "Congratulations, you've just reached the Sunpetal Savant milestone! You've discovered each Sunpetal variant. You're a true Sunpetal expert!",
   "milestone.bloomBigShot": "Congratulations, you've just reached the Bloom Big Shot milestone! You've discovered each Bloom variant. You're a true Bloom expert!",
   "milestone.lilyLuminary": "Congratulations, you've just reached the Lily Luminary milestone! You've discovered each Lily variant. You're a true Lily expert!",
+  "milestone.marineBiologist": "Congratulations, you've just reached the Marine Biologist milestone! You've discovered 37 species of fish. You're a true Marine Biologist!",
   "modalDescription.friend": "Hey there friend!",
   "modalDescription.love.fruit": "Wow, you really do love Fruits as much as I do!",
   "modalDescription.gift": "I have no more gifts for you. Don't forget to wear your new items!",
