[FEAT] Emblems tradeables

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -1691,10 +1691,10 @@
   "description.pink.egg": "A pink easter egg",
   "description.purple.egg": "A purple easter egg",
   "description.homeOwnerPainting": "A painting of the owner of this home.",
-  "description.goblin.emblem": "Show your allegiance to the Goblins",
-  "description.sunflorian.emblem": "Show your allegiance to the Sunflorians",
-  "description.bumpkin.emblem": "Show your allegiance to the Bumpkins",
-  "description.nightshade.emblem": "Show your allegiance to the Nightshades",
+  "description.goblin.emblem": "A powerful emblem for those in the Goblin Faction. ",
+  "description.sunflorian.emblem": "A powerful emblem for those in the Sunflorian Faction. ",
+  "description.bumpkin.emblem": "A powerful emblem for those in the Bumpkin Faction. ",
+  "description.nightshade.emblem": "A powerful emblem for those in the Nightshade Faction. ",
   "description.faction.mark": "Use these in the Faction Shop",
   "gameOptions.title": "Game Options",
   "gameOptions.farmId": "Farm ID #{{farmId}}",
