Add Fish Frenzy Modal

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4907,6 +4907,8 @@
   "sunshower.info.one": "Your crops grow 2x faster!",
   "sunshower.tooltip": "Sunshower blessed - 2x crop speed.",
   "sunshower.specialEvent": "Special Event - Sunshower",
+  "fishFrenzy.specialEvent": "Special Event - Fish Frenzy",
+  "fishFrenzy.info.one": "Your fish catches will increase by 1 today!",
   "vip.1Month": "1 Month",
   "vip.3Months": "3 Months",
   "vip.2Years": "2 Years",
