[FIX] VIP benefit reputation typo

--- a/src/lib/i18n/dictionaries/de.json
+++ b/src/lib/i18n/dictionaries/de.json
@@ -4787,7 +4787,7 @@
   "vip.benefit.expBoost": "10% EP-Boost",
   "vip.benefit.stellaDiscounts": "Stella SFL Rabatte",
   "vip.benefit.bonusDelivery": "Bonuslieferung und Prämien für die lästige Arbeit",
-  "vip.benefit.reputation": "500 Reputationspunkte",
+  "vip.benefit.reputation": "{{points}} Reputationspunkte",
   "vip.benefit.competition": "Bonus-Wettbewerbspunkte + mehr!",
   "gameOptions.notifications": "Benachrichtigungen",
   "gameOptions.notifications.updating": "Einstellungen aktualisieren",
