--- a/src/lib/i18n/dictionaries/es.json
+++ b/src/lib/i18n/dictionaries/es.json
@@ -4783,7 +4783,7 @@
   "vip.benefit.expBoost": "Aumento de EXP del 10%",
   "vip.benefit.stellaDiscounts": "Descuentos en Stella SFL",
   "vip.benefit.bonusDelivery": "Entrega de bonos y recompensas por tareas",
-  "vip.benefit.reputation": "500 puntos de reputación",
+  "vip.benefit.reputation": "{{points}} puntos de reputación",
   "vip.benefit.competition": "¡Puntos de competición adicionales y más!",
   "gameOptions.notifications": "Notificaciones",
   "gameOptions.notifications.updating": "Actualización de la configuración",
