Replace "Seasonal" terminology with "Chapter" across multiple files
This commit updates references from "Seasonal" to "Chapter" in various components, including:
- Renaming functions like getPreviousSeasonalBanner to getPreviousChapterBanner
- Updating currency names from "Seasonal Ticket" to "Chapter Ticket"
- Modifying translation strings and analytics tracking
- Adjusting variable names in multiple components and test files

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3914,7 +3914,7 @@
   "bounties.board": "Bounty board",
   "bounties.board.info": "Trade this week's bounties before time runs out.",
   "bounties.board.travel": "Travel to the plaza and find Poppy to fulfill these bounties",
-  "bounties.board.ticketAmount": "The amount of {{seasonalTicket}}s will vary each week based on the requests.",
+  "bounties.board.ticketAmount": "The amount of {{chapterTicket}}s will vary each week based on the requests.",
   "bounties.board.empty": "There are no deals available right now.",
   "bounties.sold": "Sold",
   "bounties.sell.coins": "Are you sure you want to sell this for {{amount}} coins?",
