[FEAT] Gunter intro

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3575,6 +3575,7 @@
   "world.lvl.requirement": "Lvl {{lvl}}",
   "world.factionMembersOnly": "Faction members only",
   "world.newArea": "New",
+  "world.volcaro": "Volcaro",
   "world.intro.one": "Howdy Bumpkin, welcome to Pumpkin Plaza. Here Bumpkins from far and wide come together to trade, complete deliveries and play mini-games.",
   "world.intro.two": "Explore the Plaza and find Bumpkins who are waiting for your deliveries. In exchange, they will give you rewards!",
   "world.intro.missingDelivery": "Hmmm, it looks like you haven't gathered resources for a delivery yet. You can still explore in the meantime.",
