[FIX] visiting typo

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -1782,7 +1782,7 @@
   "compost.complete": "Compost complete",
   "aoe.locked": "AOE Locked",
   "sunflowerLandCodex": "Sunflower Land Codex",
-  "visiting.farmId": "Visting #{{farmId}}",
+  "visiting.farmId": "Visiting #{{farmId}}",
   "stock.inStock": "{{stock}} in stock",
   "stock.left": "{{stock}} left",
   "pirate.chest": "Pirate Chest",
