[FEAT] Whats on updates

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4531,7 +4531,7 @@
   "whatsOn.megastoreText": "Trade horseshoes for NFTs at the Megastore or win them at the Auction House",
   "whatsOn.sflMarketplaceText": "The $SFL marketplace is now live! Trade $SFL for NFTs.",
   "whatsOn.auctionText": "Compete and outbid your friends for the best NFTs!",
-  "whatsOn.animalCompetitionText": "Complete animal tasks & climb the leaderboard to win prizes & $SFL!",
+  "whatsOn.animalCompetitionText": "Complete tasks & climb the leaderboard to win prizes & $SFL!",
   "whatsOn.mysterySeasonText": "Prepare your resources & master the marketplace. The mystery season is coming!",
   "whatsOn.date.nov1": "November 1st",
   "whatsOn.date.nov4": "November 4th",
@@ -4553,7 +4553,7 @@
   "description.toxic.tuft": "A mutated sheep whose toxic fleece produces the finest merino wool in the land!",
   "description.mootant": "This genetically enhanced bovine here to boost your leather production!",
   "description.cropCircle": "A mysterious circle that appears on your farm...what could it mean?",
-  "whatsOn.auction.tickets": "No horseshoes from chores and bounties this week.",
+  "whatsOn.auction.tickets": "No timeshards from chores and bounties this week.",
   "description.cheese": "A delicious dairy delight made from fresh milk",
   "description.pizzaMargherita": "A classic Italian pizza with tomatoes and cheese",
   "description.blueCheese": "A strong flavored cheese with blue mold",
@@ -5055,5 +5055,22 @@
   "lavaPit.collect": "Collect",
   "lavaPit.throw": "Throw resources into pit",
   "lavaPit.description": "The lava pit turns resources into Obsidian. Requirements change each season.",
-  "island.required": "Upgrade to {{island}}"
+  "island.required": "Upgrade to {{island}}",
+  "whatsOn.windsOfChange": "Winds of Change",
+  "whatsOn.march31st": "March 31st",
+  "whatsOn.february3rd": "February 3rd",
+  "whatsOn.seasonsArrived": "Summer, Spring, Autumn and Winter have come to Sunflower Land!",
+  "whatsOn.volcanoIsland": "Upgrade to Volcano Island, discover the Lava Pit and gather Obsidian!",
+  "whatsOn.ancientClocks": "Ancient Clocks have appeared in the Desert!",
+  "whatsOn.solarForge": "Visit Volcaro Island and exchange your Sunstones at the Solar Forge!",
+  "whatsOn.weatherEvents": "Watch our for special weather events and protect your crops!",
+  "whatsOn.nftRace": "The NFT race begins!",
+  "whatsOn.february10th": "February 10th",
+  "whatsOn.timeshardsEarning": "Complete chores, deliveries & bounties to earn Timeshards!",
+  "whatsOn.timeshardsUsage": "Collect enough Timeshards to purchase NFTs at the Megastore and Auction House.",
+  "whatsOn.vipPass": "Grab your VIP Pass for bonus Timeshards and perks!",
+  "whatsOn.skillSystem": "New skill system launched!",
+  "whatsOn.seasonCompetition": "Season Competition",
+  "whatsOn.april14th": "14th April",
+  "whatsOn.may1st": "1st May"
 }
