--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4905,12 +4905,11 @@
   "insectPlague.protected.two": "None of your crops have been affected.",
   "insectPlague.destroyed.one": "Oh no! Insect plague is infesting your crops!",
   "insectPlague.destroyed.two": "The insect plague has devastated your crops, reducing all harvests by half",
-  "insectPlague.crops.affected": "Insect plague affected, crops reduced by 50%",
-  "calendar.events.sunshower.title": "Sunshower",
-  "calendar.events.sunshower.description": "A rare weather phenomenon where the sun shines while it rains, bringing good fortune to your crops.",
   "sunshower.info.one": "Your crops grow 2x faster!",
   "sunshower.tooltip": "Sunshower blessed - 2x crop speed.",
   "sunshower.specialEvent": "Special Event - Sunshower",
+  "fishFrenzy.specialEvent": "Special Event - Fish Frenzy",
+  "fishFrenzy.info.one": "Your fish catches will increase by 1 today!",
   "vip.1Month": "1 Month",
   "vip.3Months": "3 Months",
   "vip.2Years": "2 Years",
@@ -4956,6 +4955,11 @@
   "calendar.events.tornado.prevention": "Tornado Pinwheel",
   "calendar.events.tsunami.prevention": "Mangrove",
   "calendar.events.greatFreeze.prevention": "Thermal Stone",
+  "insectPlague.crops.affected": "Insect plague affected, crops reduced by 50%",
+  "calendar.events.sunshower.title": "Sunshower",
+  "calendar.events.sunshower.description": "A rare weather phenomenon where the sun shines while it rains, bringing good fortune to your crops.",
+  "calendar.events.fishFrenzy.title": "Fish Frenzy",
+  "calendar.events.fishFrenzy.description": "A rare phenomenon that increases fish catches by one",
   "season.spring": "Spring",
   "season.summer": "Summer",
   "season.autumn": "Autumn",
@@ -5005,7 +5009,6 @@
   "description.duskberry": "A rare berry that grows in the dark.",
   "description.lunara": "A rare berry that grows in the dark.",
   "description.celestine": "A rare berry that grows in the dark.",
-  "searchHere": "Search here...",
   "reputation.title": "Reputation",
   "reputation.description": "Increase your reputation to unlock more Web3 features!",
   "reputation.sprout.description": "1 Marketplace Trade per day",
