[FEAT] Add to crop guide

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -5042,6 +5042,7 @@
   "cropGuide.cropMachine.seeds": "Crop Machine Seeds",
   "cropGuide.cantPlantSeeds": "Seeds can't be planted",
   "cropGuide.onlyInCropMachine": "Seeds can only be planted in Crop Machine",
+  "cropGuide.tutorialAlwaysSpring": "On your first island, it is always Spring! When you upgrade your island, the seasons will begin to change.",
   "spring.seeds": "Spring Seeds",
   "summer.seeds": "Summer Seeds",
   "autumn.seeds": "Autumn Seeds",
