--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -2333,7 +2333,7 @@
   "islandupgrade.welcomeVolcanoIsland": "Welcome to Volcano Island!",
   "islandupgrade.itemsReturned": "Your items have been safely returned to your inventory.",
   "islandupgrade.notReadyExpandMore": "You are not ready. Expand {{remainingExpansions}} more times",
-  "islandupgrade.exoticResourcesDescription": "This area of Sunflower Land is known for its exotic resources. Expand your land to discover fruit, flowers, bee hives & rare minerals!",
+  "islandupgrade.exoticResourcesDescription": "This area of Sunflower Land is known for its exotic resources. Expand your land to discover fruit, flowers, bee hives & rare minerals! Keep an eye on the seasons as they affect what you can grow.",
   "islandupgrade.desertResourcesDescription": "The harsh desert environment requires new technology to survive. Expand your land to discover new buildings and what's inside!",
   "islandupgrade.volcanoResourcesDescription": "A dangerous volcanic terrain with precious minerals and rare resources waiting to be discovered. Expand your land to uncover its secrets!",
   "islandupgrade.requiredIsland": "Unlocks at {{islandType}}",
