[FEAT] Infernos name

--- a/src/lib/i18n/dictionaries/de.json
+++ b/src/lib/i18n/dictionaries/de.json
@@ -5010,7 +5010,7 @@
   "description.autumnDuckling": "Knackige Blätter und kuschelige Federn, bereit für die Erntezeit.",
   "description.winterDuckling": "Gebündelt in Daunenfedern watschelt dieser Kleine jubelnd durch das Winterwunderland.",
   "visiting.farmId": "Zu Besuch bei # {{farmId}}",
-  "world.volcaro": "Volcaro",
+  "world.infernos": "Infernos",
   "island.required": "Upgrade auf {{island}}",
   "whatsOn.animalCompetitionText": "Erledige Aufgaben und erklimme die Bestenliste, um Preise und $SFL zu gewinnen!",
   "whatsOn.auction.tickets": "Diese Woche gibt es keine Timeshards von Hausarbeiten und Kopfgeldern.",
@@ -5020,7 +5020,7 @@
   "whatsOn.seasonsArrived": "Sommer, Frühling, Herbst und Winter sind im Sonnenblumenland angekommen!",
   "whatsOn.volcanoIsland": "Rüste auf die Vulkaninsel auf, entdecke die Lavagrube und sammle Obsidian!",
   "whatsOn.ancientClocks": "Uralte Uhren sind in der Wüste aufgetaucht!",
-  "whatsOn.solarForge": "Besucht die Insel Volcaro und tauscht eure Sonnensteine in der Solarschmiede ein!",
+  "whatsOn.solarForge": "Besucht die Insel Infernos und tauscht eure Sonnensteine in der Solarschmiede ein!",
   "whatsOn.weatherEvents": "Achten Sie auf besondere Wetterereignisse und schützen Sie Ihre Pflanzen!",
   "whatsOn.nftRace": "Das NFT-Rennen beginnt!",
   "whatsOn.february10th": "10. Februar",
