--- a/src/lib/i18n/dictionaries/es.json
+++ b/src/lib/i18n/dictionaries/es.json
@@ -5010,7 +5010,7 @@
   "description.autumnDuckling": "Hojas crujientes y plumas acogedoras, listas para la temporada de cosecha.",
   "description.winterDuckling": "Envuelto en plumas suaves, este pequeño deambula con alegría por el paraíso invernal.",
   "visiting.farmId": "Visitando # {{farmId}}",
-  "world.volcaro": "Volcaro",
+  "world.infernos": "Infernos",
   "island.required": "Actualiza a {{island}}",
   "whatsOn.animalCompetitionText": "¡Completa tareas y escala en la clasificación para ganar premios y $ SFL!",
   "whatsOn.auction.tickets": "Esta semana no habrá tiempo compartido por tareas ni recompensas.",
@@ -5020,7 +5020,7 @@
   "whatsOn.seasonsArrived": "¡El verano, la primavera, el otoño y el invierno han llegado a Sunflower Land!",
   "whatsOn.volcanoIsland": "¡Sube a Volcano Island, descubre el pozo de lava y recoge obsidiana!",
   "whatsOn.ancientClocks": "¡Han aparecido relojes antiguos en el desierto!",
-  "whatsOn.solarForge": "¡Visita la isla Volcaro e intercambia tus piedras solares en la Forja Solar!",
+  "whatsOn.solarForge": "¡Visita la isla Infernos e intercambia tus piedras solares en la Forja Solar!",
   "whatsOn.weatherEvents": "¡Esté atento a los eventos climáticos especiales y proteja sus cultivos!",
   "whatsOn.nftRace": "¡Comienza la carrera de NFT!",
   "whatsOn.february10th": "10 de febrero",
