--- a/src/lib/i18n/dictionaries/fr.json
+++ b/src/lib/i18n/dictionaries/fr.json
@@ -5010,7 +5010,7 @@
   "description.autumnDuckling": "Des feuilles croustillantes et des plumes douillettes, prêtes pour la saison des récoltes.",
   "description.winterDuckling": "Emmitouflé dans des plumes duveteuses, ce petit bonhomme se dandine joyeusement dans le pays des merveilles de l'hiver.",
   "visiting.farmId": "N° de visite {{farmId}}",
-  "world.volcaro": "Volcaro",
+  "world.infernos": "Infernos",
   "island.required": "Passez à {{island}}",
   "whatsOn.animalCompetitionText": "Accomplissez des tâches et grimpez dans le classement pour gagner des prix et des $ SFL !",
   "whatsOn.auction.tickets": "Pas de temps imparti pour les corvées et les primes cette semaine.",
@@ -5020,7 +5020,7 @@
   "whatsOn.seasonsArrived": "L'été, le printemps, l'automne et l'hiver sont arrivés au pays des tournesols !",
   "whatsOn.volcanoIsland": "Passez à Volcano Island, découvrez la fosse à lave et récupérez de l'obsidienne !",
   "whatsOn.ancientClocks": "Des horloges anciennes sont apparues dans le désert !",
-  "whatsOn.solarForge": "Visitez l'île de Volcaro et échangez vos pierres solaires à la Forge solaire !",
+  "whatsOn.solarForge": "Visitez l'île de Infernos et échangez vos pierres solaires à la Forge solaire !",
   "whatsOn.weatherEvents": "Surveillez les événements météorologiques spéciaux et protégez vos cultures !",
   "whatsOn.nftRace": "La course aux NFT commence !",
   "whatsOn.february10th": "Le 10 février",
