--- a/src/lib/i18n/dictionaries/id.json
+++ b/src/lib/i18n/dictionaries/id.json
@@ -5010,7 +5010,7 @@
   "description.autumnDuckling": "Daun renyah dan bulu yang nyaman, siap untuk musim panen.",
   "description.winterDuckling": "Dibundel dalam bulu berbulu halus, si kecil ini bergoyang melalui negeri ajaib musim dingin dengan gembira.",
   "visiting.farmId": "Mengunjungi # {{farmId}}",
-  "world.volcaro": "Volcaro",
+  "world.infernos": "Infernos",
   "island.required": "Tingkatkan ke {{island}}",
   "whatsOn.animalCompetitionText": "Selesaikan tugas & naiki papan peringkat untuk memenangkan hadiah & $ SFL!",
   "whatsOn.auction.tickets": "Tidak ada waktu yang sulit dari tugas-tugas dan hadiah minggu ini.",
@@ -5020,7 +5020,7 @@
   "whatsOn.seasonsArrived": "Musim Panas, Musim Semi, Musim Gugur dan Musim Dingin telah datang ke Sunflower Land!",
   "whatsOn.volcanoIsland": "Tingkatkan ke Pulau Gunung Berapi, temukan Lava Pit dan kumpulkan Obsidian!",
   "whatsOn.ancientClocks": "Jam Kuno telah muncul di Gurun!",
-  "whatsOn.solarForge": "Kunjungi Pulau Volcaro dan tukar batu matahari Anda di Solar Forge!",
+  "whatsOn.solarForge": "Kunjungi Pulau Infernos dan tukar batu matahari Anda di Solar Forge!",
   "whatsOn.weatherEvents": "Tonton acara cuaca khusus kami dan lindungi tanaman Anda!",
   "whatsOn.nftRace": "Perlombaan NFT dimulai!",
   "whatsOn.february10th": "10 Februari",
