--- a/src/lib/i18n/dictionaries/it.json
+++ b/src/lib/i18n/dictionaries/it.json
@@ -5010,7 +5010,7 @@
   "description.autumnDuckling": "Foglie croccanti e piume accoglienti, pronte per la stagione del raccolto.",
   "description.winterDuckling": "Avvolto in piume lanuginose, questo piccolino attraversa con allegria il paese delle meraviglie invernali.",
   "visiting.farmId": "Visitando # {{farmId}}",
-  "world.volcaro": "Volcaro",
+  "world.infernos": "Infernos",
   "island.required": "Esegui l'upgrade a {{island}}",
   "whatsOn.animalCompetitionText": "Completa le attività e scala la classifica per vincere premi e $SFL!",
   "whatsOn.auction.tickets": "Questa settimana non si risparmiano le faccende e le ricompense.",
@@ -5020,7 +5020,7 @@
   "whatsOn.seasonsArrived": "L'estate, la primavera, l'autunno e l'inverno sono arrivati a Sunflower Land!",
   "whatsOn.volcanoIsland": "Passa a Volcano Island, scopri la fossa di lava e raccogli l'ossidiana!",
   "whatsOn.ancientClocks": "Antichi orologi sono comparsi nel deserto!",
-  "whatsOn.solarForge": "Visita l'isola di Volcaro e scambia le tue pietre solari alla Solar Forge!",
+  "whatsOn.solarForge": "Visita l'isola di Infernos e scambia le tue pietre solari alla Solar Forge!",
   "whatsOn.weatherEvents": "Tieni d'occhio gli eventi meteorologici speciali e proteggi i tuoi raccolti!",
   "whatsOn.nftRace": "Inizia la corsa agli NFT!",
   "whatsOn.february10th": "10 febbraio",
