--- a/src/lib/i18n/dictionaries/ja.json
+++ b/src/lib/i18n/dictionaries/ja.json
@@ -5010,7 +5010,7 @@
   "description.autumnDuckling": "さわやかな葉と心地よい羽毛で、収穫期を迎えようとしています。",
   "description.winterDuckling": "綿毛のような羽に身を包んだこの小さな子は、元気を出して冬のワンダーランドを歩き回っています。",
   "visiting.farmId": "訪問数 {{farmId}}",
-  "world.volcaro": "ヴォルカロ",
+  "world.infernos": "ヴォルカロ",
   "island.required": "{{island}} にアップグレード",
   "whatsOn.animalCompetitionText": "タスクを完了してリーダーボードに登り、賞品と$SFLを獲得しましょう！",
   "whatsOn.auction.tickets": "今週は雑用や賞金によるタイムシャードはありません。",
