--- a/src/lib/i18n/dictionaries/ms.json
+++ b/src/lib/i18n/dictionaries/ms.json
@@ -5010,7 +5010,7 @@
   "description.autumnDuckling": "Daun garing dan bulu yang selesa, siap untuk musim menuai.",
   "description.winterDuckling": "Dibungkus dengan bulu berbulu, si kecil ini berkeliaran melalui kawasan ajaib musim sejuk dengan ceria.",
   "visiting.farmId": "Melawat # {{farmId}}",
-  "world.volcaro": "Volcaro",
+  "world.infernos": "Infernos",
   "island.required": "Naik taraf kepada {{island}}",
   "whatsOn.animalCompetitionText": "Lengkapkan tugas & naik papan pendahulu untuk memenangi hadiah & $SFL!",
   "whatsOn.auction.tickets": "Tiada keras masa dari kerja rumah dan hadiah minggu ini.",
@@ -5020,7 +5020,7 @@
   "whatsOn.seasonsArrived": "Musim Panas, Musim Bunga, Musim Luruh dan Musim Sejuk telah datang ke Tanah Bunga Matahari!",
   "whatsOn.volcanoIsland": "Naik taraf ke Pulau Gunung Berapi, temui Lava Pit dan kumpulkan Obsidian!",
   "whatsOn.ancientClocks": "Jam kuno telah muncul di Gurun!",
-  "whatsOn.solarForge": "Lawati Pulau Volcaro dan tukar Batu Matahari anda di Solar Forge!",
+  "whatsOn.solarForge": "Lawati Pulau Infernos dan tukar Batu Matahari anda di Solar Forge!",
   "whatsOn.weatherEvents": "Tonton kami untuk acara cuaca khas dan lindungi tanaman anda!",
   "whatsOn.nftRace": "Perlumbaan NFT bermula!",
   "whatsOn.february10th": "10 Februari",
