--- a/src/lib/i18n/dictionaries/pt-BR.json
+++ b/src/lib/i18n/dictionaries/pt-BR.json
@@ -5010,7 +5010,7 @@
   "description.autumnDuckling": "Folhas crocantes e penas aconchegantes, prontas para a época da colheita.",
   "description.winterDuckling": "Envolto em penas felpudas, este pequeno percorre o país das maravilhas do inverno com alegria.",
   "visiting.farmId": "Visitando # {{farmId}}",
-  "world.volcaro": "Volcaro",
+  "world.infernos": "Infernos",
   "island.required": "Atualize para {{island}}",
   "whatsOn.animalCompetitionText": "Complete tarefas e suba na tabela de classificação para ganhar prêmios e $ SFL!",
   "whatsOn.auction.tickets": "Sem dificuldades de trabalho e recompensas nesta semana.",
@@ -5020,7 +5020,7 @@
   "whatsOn.seasonsArrived": "O verão, a primavera, o outono e o inverno chegaram à Terra dos Girassóis!",
   "whatsOn.volcanoIsland": "Faça um upgrade para a Ilha do Vulcão, descubra o Poço de Lava e colete Obsidian!",
   "whatsOn.ancientClocks": "Relógios antigos apareceram no deserto!",
-  "whatsOn.solarForge": "Visite a Ilha Volcaro e troque suas Pedras do Sol no Solar Forge!",
+  "whatsOn.solarForge": "Visite a Ilha Infernos e troque suas Pedras do Sol no Solar Forge!",
   "whatsOn.weatherEvents": "Fique atento aos nossos eventos climáticos especiais e proteja suas plantações!",
   "whatsOn.nftRace": "A corrida NFT começa!",
   "whatsOn.february10th": "10 de fevereiro",
