--- a/src/lib/i18n/dictionaries/ru.json
+++ b/src/lib/i18n/dictionaries/ru.json
@@ -5010,7 +5010,7 @@
   "description.autumnDuckling": "Свежие листья и уютные перья, готовые к сезону сбора урожая.",
   "description.winterDuckling": "Этот малыш в пуховых перьях весело бродит по зимней стране чудес.",
   "visiting.farmId": "Посещение # {{farmId}}",
-  "world.volcaro": "Вулкаро",
+  "world.infernos": "Вулкаро",
   "island.required": "Обновить до {{island}}",
   "whatsOn.animalCompetitionText": "Выполняйте задания и поднимайтесь в таблице лидеров, чтобы выиграть призы и доллары SFL!",
   "whatsOn.auction.tickets": "На этой неделе нет отсрочек от работы по дому и наград.",
