--- a/src/lib/i18n/dictionaries/tr.json
+++ b/src/lib/i18n/dictionaries/tr.json
@@ -5010,7 +5010,7 @@
   "description.autumnDuckling": "Gevrek yapraklar ve rahat tüyler, hasat mevsimi için hazır.",
   "description.winterDuckling": "Tüylü tüylerle paketlenmiş bu küçük çocuk, kış harikalar diyarında neşeyle dolaşıyor.",
   "visiting.farmId": "Ziyaret # {{farmId}}",
-  "world.volcaro": "Volcaro",
+  "world.infernos": "Infernos",
   "island.required": "{{island}} sürümüne yükseltin",
   "whatsOn.animalCompetitionText": "Ödüller ve $ SFL kazanmak için görevleri tamamlayın ve liderlik tablosuna tırmanın!",
   "whatsOn.auction.tickets": "Bu hafta ev işlerinden ve ödüllere zaman sıkıntısı yok.",
@@ -5020,7 +5020,7 @@
   "whatsOn.seasonsArrived": "Yaz, İlkbahar, Sonbahar ve Kış Ayçiçeği Ülkesine geldi!",
   "whatsOn.volcanoIsland": "Volcano Island'a yükseltin, Lav Çukurunu keşfedin ve Obsidiyen'i toplayın!",
   "whatsOn.ancientClocks": "Çölde Kadim Saatler ortaya çıktı!",
-  "whatsOn.solarForge": "Volcaro Adası\"nı ziyaret edin ve Güneş Taşlarınızı Solar Forge\"da değiştirin!",
+  "whatsOn.solarForge": "Infernos Adası\"nı ziyaret edin ve Güneş Taşlarınızı Solar Forge\"da değiştirin!",
   "whatsOn.weatherEvents": "Özel hava olayları için bizi izleyin ve mahsullerinizi koruyun!",
   "whatsOn.nftRace": "NFT yarışı başlıyor!",
   "whatsOn.february10th": "10 Şubat",
