--- a/src/lib/i18n/dictionaries/zh-CN.json
+++ b/src/lib/i18n/dictionaries/zh-CN.json
@@ -5010,7 +5010,7 @@
   "description.autumnDuckling": "清脆的树叶和舒适的羽毛，为收获季节做好了准备。",
   "description.winterDuckling": "这个小家伙被毛茸茸的羽毛捆绑在一起，欢呼地穿行在冬日仙境中。",
   "visiting.farmId": "访问 # {{farmId}}",
-  "world.volcaro": "沃尔卡罗",
+  "world.infernos": "沃尔卡罗",
   "island.required": "升级到 {{island}}",
   "whatsOn.animalCompetitionText": "完成任务并爬上排行榜，赢取奖品和$SFL！",
   "whatsOn.auction.tickets": "本周没有从琐事和赏金中抽出时间。",
