--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -3624,7 +3624,7 @@
   "world.lvl.requirement": "Lvl {{lvl}}",
   "world.factionMembersOnly": "Faction members only",
   "world.newArea": "New",
-  "world.volcaro": "Volcaro",
+  "world.infernos": "Infernos",
   "world.intro.one": "Howdy Bumpkin, welcome to Pumpkin Plaza. Here Bumpkins from far and wide come together to trade, complete deliveries and play mini-games.",
   "world.intro.two": "Explore the Plaza and find Bumpkins who are waiting for your deliveries. In exchange, they will give you rewards!",
   "world.intro.missingDelivery": "Hmmm, it looks like you haven't gathered resources for a delivery yet. You can still explore in the meantime.",
@@ -5118,7 +5118,7 @@
   "whatsOn.seasonsArrived": "Summer, Spring, Autumn and Winter have come to Sunflower Land!",
   "whatsOn.volcanoIsland": "Upgrade to Volcano Island, discover the Lava Pit and gather Obsidian!",
   "whatsOn.ancientClocks": "Ancient Clocks have appeared in the Desert!",
-  "whatsOn.solarForge": "Visit Volcaro Island and exchange your Sunstones at the Solar Forge!",
+  "whatsOn.solarForge": "Visit Infernos Island and exchange your Sunstones at the Solar Forge!",
   "whatsOn.weatherEvents": "Watch our for special weather events and protect your crops!",
   "whatsOn.nftRace": "The NFT race begins!",
   "whatsOn.february10th": "February 10th",
@@ -5132,5 +5132,9 @@
   "season.hasBegun": "{{name}} has begun!",
   "season.newCrops": "New crops & fish",
   "season.7daysOfSeason": "7 days of {{name}}",
-  "season.begun.description": "{{name}} has begun in Sunflower Land. Check out this week's events."
+  "season.begun.description": "{{name}} has begun in Sunflower Land. Check out this week's events.",
+  "solarForge.intro.greeting": "Wow, I'm surprised you've made it this far!",
+  "solarForge.intro.gunter": "I'm Gunter, the blacksmith of Infernos.",
+  "solarForge.intro.forge": "I've been working on a new type of forge that can help you craft resources with the power of the sun.",
+  "solarForge.intro.forgeStrength": "The strength of the forge is limited, each time you use it will require more Sunstones!"
 }
