--- a/src/lib/i18n/dictionaries/ko.json
+++ b/src/lib/i18n/dictionaries/ko.json
@@ -5010,7 +5010,7 @@
   "description.autumnDuckling": "파삭파삭한 잎사귀와 포근한 깃털로 수확철에 바로 사용할 수 있습니다.",
   "description.winterDuckling": "솜털 깃털로 묶인 이 꼬마는 환호성을 지르며 겨울 원더랜드를 헤쳐나갑니다.",
   "visiting.farmId": "방문 # {{farmId}}",
-  "world.volcaro": "볼카로",
+  "world.infernos": "볼카로",
   "island.required": "{{island}} 로 업그레이드",
   "whatsOn.animalCompetitionText": "작업을 완료하고 순위표에 올라 상금과 $SFL을 받으세요!",
   "whatsOn.auction.tickets": "이번 주에는 집안일과 현상금으로 인한 타임샤드가 없습니다.",
