[FEAT] Add mutants

--- a/src/lib/i18n/dictionaries/dictionary.json
+++ b/src/lib/i18n/dictionaries/dictionary.json
@@ -4654,6 +4654,15 @@
   "description.golden.cow.boost": "Feed cows for free!",
   "description.volcanoGnome": "A mineral obsessed gnome that can survive the harshest of conditions.",
   "description.volcanoGnome.boost": "+0.1 Minerals",
+  "description.frozen.sheep.boost": "No sheep sickness during winter",
+  "description.frozen.sheep": "A sheep that has been frozen solid by the winter winds.",
+  "description.frozen.cow.boost": "No cow sickness during winter",
+  "description.frozen.cow": "A cow that has been frozen solid by the winter winds.",
+  "description.summer.chicken.boost": "No chicken sickness during summer",
+  "description.summer.chicken": "A sun-loving chicken that thrives in the summer heat, basking in the warm rays and clucking with joy!",
+  "description.jellyfish.boost": "Increase fish catch by 1 in summer",
+  "description.jellyfish": "A luminous marine marvel that glows with mystical energy, granting enhanced fishing abilities during the warm summer months.",
+  "description.chamomile": "A decorative mutant flower found during the Winds of Change chapter.",
   "friendship.gift.points": "Points",
   "friendship.gift.nextReward": "Next Reward:",
   "friendship.gift.firstReward": "First Reward:",
